--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -72,7 +72,7 @@
 				-->
 				<ul id="nav" class="full">
 					<li>
-						<a href="about.php">
+						<a href="about">
 							<span class="count hide-on-mobile">01.</span>
 							About
 						</a>
@@ -83,7 +83,7 @@
 						</ul>-->
 					</li>
 					<li>
-						<a href="works.php">
+						<a href="works">
 							<span class="count hide-on-mobile">02.</span>
 							Works
 						</a>
@@ -102,7 +102,7 @@
 					</li>
 
 					<li>
-						<a href="contact.php">
+						<a href="contact">
 							<span class="count hide-on-mobile">03.</span>Contact
 						</a>
 						<!--<ul>
@@ -128,7 +128,7 @@
 		<div class="logo-wrap">
 			<div class="container">
 				<div class="desktop-6 columns">
-					<h1><a href="index.php" title="Home"><img src="images/logo_text_half.png" alt="" /></a></h1>
+					<h1><a href="/" title="Home"><img src="images/logo_text_half.png" alt="" /></a></h1>
 				</div><!-- // .desktop-6 -->
 
 				<div class="desktop-6 columns">
