--- a/views/about.html
+++ b/views/about.html
@@ -1,4 +1,4 @@
-<?php include("header.php");?>
+<% include ../partials/header %>
 	<!-- About
 	================================================== -->
 	<section id="about" class="page">
@@ -85,4 +85,4 @@
 
 	</section><!-- // section#about -->
 
-<?php include("footer.php");?>
+<% include ../partials/footer %>
