--- a/views/works.html
+++ b/views/works.html
@@ -1,4 +1,4 @@
-<?php include("header.php");?>
+<% include ../partials/header %>
 	<!-- Works (Three Columns)
 	================================================== -->
 	<section id="works" class="">
@@ -185,4 +185,4 @@
 		</div><!-- // .container -->
 	</section><!-- // section#works -->
 
-<?php include("footer.php");?>
+<% include ../partials/footer %>
